@@ -36,6 +36,12 @@ namespace LifecycleRebalanceRevisited
                 sunsetCheckbox.isChecked = !isChecked;
                 Configuration<LifecycleRebalanceSettingsFile>.Save();
             });
+            group.AddGroup(" ");
+            group.AddCheckbox("Log deaths to 'Lifecycle death log.txt'", settings.LogDeaths, (isChecked) => { settings.LogDeaths = isChecked; Configuration<LifecycleRebalanceSettingsFile>.Save(); });
+            group.AddCheckbox("Log immigrants to 'Lifecycle immigration log.txt'", settings.LogImmigrants, (isChecked) => { settings.LogImmigrants = isChecked; Configuration<LifecycleRebalanceSettingsFile>.Save(); });
+            group.AddCheckbox("Log transport choices to 'Lifecycle transport log.txt'", settings.LogTransport, (isChecked) => { settings.LogTransport = isChecked; Configuration<LifecycleRebalanceSettingsFile>.Save(); });
+            group.AddGroup("WARNING: Logging transport choices will slow your game!");
         }
+
     }
 }
